Alignments fixed.

--- a/portfolio/src/Stylesheets/Intro.css
+++ b/portfolio/src/Stylesheets/Intro.css
@@ -55,11 +55,15 @@
     letter-spacing: 1px;
 }
 
+.INVias{
+    justify-content: space-between;
+    width: 9rem;
+}
+
 .INVia{
     background-color: rgb(30,30,30);
     border-color: white;
     border-radius: 0.5rem;
-    margin: 0.3rem;
 }
 
 .INViaLogo{
