--- a/portfolio/src/Stylesheets/Navbar.css
+++ b/portfolio/src/Stylesheets/Navbar.css
@@ -15,8 +15,8 @@
 }
 
 .NVLogo{
-    height: 3rem;
-    width: 4rem;
+    height: 2.7rem;
+    width: 2.7rem;
 }
 
 .NVContact{
